--- a/assignment3.css
+++ b/assignment3.css
@@ -1,1 +1,15 @@
 /*styles for assignment 3*/
+
+body {
+  font-family: sans-serif;
+  margin: 10px;
+}
+
+.content {
+  width: 600px;
+  margin: auto;
+}
+
+.info {
+  font-size: 0.75em;
+}
